# send_it

./: .gitignore  Anchor.toml  BRIDGE.md  Cargo.toml  GRANT_APPLICATION.md  PERPS.md  README.md  SECURITY.md  branding.html  cyreneai-comparison.html  dao-config.json  governance.html  index.html  l.html  links.html  pitch-deck.html  portfolio.html  social.html  test-amm.mjs  vercel.json
api/: storacha-upload.js
app/: airdrops.html  analytics.html  composer.html  creator-dashboard.html  creator.html  docs.html  explore.html  governance.html  governance.js  index.html  launchpad.html  launchpad.js  leaderboards.html  lending.html  links.html  loyalty.html  loyalty.js  mobile.html  partnerships.html  portfolio.html  social.html  social.js  staking.html  staking.js  storacha-upload.js  trading.html  trading.js
bot/: .env.example  .gitignore  README.md  bot-logic.js  discord-bot.js  filters.js  package.json  (+3 more)
programs/send_it/: Cargo.toml
programs/send_it/src/: achievements.rs  airdrops.rs  analytics.rs  bridge.rs  content_claims.rs  copy_trading.rs  creator_dashboard.rs  custom_pages.rs  daily_rewards.rs  embeddable_widgets.rs  fee_splitting.rs  fund_tokens.rs  holder_rewards.rs  lending.rs  lib.rs  limit_orders.rs  live_chat.rs  perps.rs  points_system.rs  prediction_market.rs  premium.rs  price_alerts.rs  raffle.rs  realms_governance.rs  referral.rs  reputation.rs  seasons.rs  share_cards.rs  social_launch.rs  stable_pairs.rs  staking.rs  token_chat.rs  token_videos.rs  voting.rs
programs/send_it_slim/: Cargo.toml
programs/send_it_slim/src/: kani_proofs.rs  lib.rs
(+57 files in other folders)
