[package]
name = "send-it"
version = "0.1.0"
description = "Send.it — A next-gen token launchpad on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "send_it"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
blake3 = "=1.5.5"
