[package]
name = "send-it-slim"
version = "0.1.0"
description = "Send.it Slim Core — Devnet deployment with init/create/buy/sell"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "send_it"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
